# XX11

./: .gitignore  AGENTS.md  Cargo.toml  DSL设计.txt  README.md  STATUS.md  初步需求.txt
doc/: Structured model outputs.txt
prompts/: evaluate.txt  generate.txt  system.txt
src/: main.rs  orchestrator.rs
src/dsl/: mod.rs  model.rs  parser.rs  validator.rs
src/llm/: gpt52.rs  mod.rs
src/state/: hit_test.rs  mod.rs
src/x11/: backend.rs  events.rs  mod.rs  renderer.rs
