[package]
name = "x11-gui-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x11rb = "0.12"
reqwest = { version = "0.11", features = ["json", "blocking"] }
fontdue = "0.7"
image = { version = "0.24", features = ["jpeg", "png"] }
base64 = "0.21"
